<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/first"
    tools:context=".SettingActivity"
    >

    <RelativeLayout
        android:id="@+id/main_top_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/setting"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/kd"
           android:layout_marginTop="1in"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/pink_week">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/savety"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:background="@color/black"
                android:layout_height="1dp"
                android:layout_marginTop="50dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:padding="10dp"
                android:text="@string/character"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:background="@color/black"
                android:layout_height="1dp"
                android:layout_marginTop="100dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                android:padding="10dp"
                android:text="@string/message"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:background="@color/black"
                android:layout_height="1dp"
                android:layout_marginTop="150dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="150dp"
                android:padding="10dp"
                android:text="@string/other"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:background="@color/black"
                android:layout_height="1dp"
                android:layout_marginTop="200dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="200dp"
                android:padding="10dp"
                android:text="@string/exit"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:background="@color/black"
                android:layout_height="1dp"
                android:layout_marginTop="250dp"/>

</RelativeLayout>

    <Button
        android:id="@+id/exit"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="500dp"
        android:gravity="center"
        android:text="返回首页">

    </Button>

</RelativeLayout>
